data transmit to server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <link href="dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="dist/js/jquery.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="function/js.js"></script>
+    <script src="javascripts/index_main.js"></script>
     <title></title>
 </head>
 <body>
@@ -16,7 +18,7 @@
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#"> Let's Go </a></li>
                 <li class="active"><a href="/"> 主页 </a></li>
-                <li><a href="/itemslist"> 商品列表 </a></li>
+                <li><a href="/itemslist" class="inputs_init"> 商品列表 </a></li>
                 </ul>
         </div>
         <div>
@@ -43,7 +45,6 @@
         <a href="itemslist"><button class="btn btn-primary btn-lg" >Let's Go</button></a>
     </div>
 </div>
-<script src="dist/js/jquery-1.8.0.min.js"></script>
-<script src="dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
