--- a/views/shopcart.ejs
+++ b/views/shopcart.ejs
@@ -5,16 +5,12 @@
     <link href="dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="dist/js/jquery-1.8.0.min.js"></script>
+    <script src="dist/js/jquery.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
 
-    <script src="model/fixtures.js"></script>
     <script src="model/item.js"></script>
-    <script src="model/promotion.js"></script>
     <script src="lib/underscore.js"></script>
 
-    <script src="function/small_function_encapsulation.js"></script>
-    <script src="function/shopcartoutput.js"></script>
     <title></title>
 </head>
 <body>
