--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,14 +6,8 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
-    <script src="model/fixtures.js"></script>
-    <script src="model/item.js"></script>
-    <script src="model/promotion.js"></script>
     <script src="lib/underscore.js"></script>
-
-    <script src="function/small_function_encapsulation.js"></script>
-    <script src="function/detailsoutput.js"></script>
-    <script type="text/javascript" src="lib/moment-with-locales.js"></script>
+    <script src="lib/moment-with-locales.js"></script>
 
     <title></title>
 </head>
