--- a/views/shopcart.ejs
+++ b/views/shopcart.ejs
@@ -2,14 +2,15 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <script src="lib/underscore.js"></script>
     <link href="dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="dist/js/jquery.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
 
-    <script src="model/item.js"></script>
-    <script src="lib/underscore.js"></script>
+    <script src="javascripts/shopcart_main.js"></script>
+
 
     <title></title>
 </head>
@@ -38,9 +39,24 @@
 <br>
 <br>
 <br>
-<br>
 
-<div class="purchase_commodity_list"></div>
+<table class="table table-bordered text-center">
+    <thead class="items_list">
+    <tr>
+        <td class='col-md-1'>分类</td>
+        <td class='col-md-2'>名称</td>
+        <td class='col-md-2'>单价（元）</td>
+        <td class='col-md-1'>单位</td>
+        <td class='col-md-3'>数量</td>
+        <td class='col-md-4'>小计</td>
+    </tr>
+    </thead>
+
+    <tbody>
+
+    </tbody>
+</table>
+
 <br>
 <div class="subtotal container" align="right" ></div>
 <div class="payment container " align="right" >
