items data can display,but must refresh two times

--- a/views/itemslist.ejs
+++ b/views/itemslist.ejs
@@ -23,12 +23,12 @@
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#"> Let's Go </a></li>
                 <li><a href="/"> 主页 </a></li>
-                <li class="active"><a href="itemlist"> 商品列表 </a></li>
+                <li class="active"><a href="itemslist"> 商品列表 </a></li>
             </ul>
         </div>
         <div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="shopcart" class="shopcart"> <span class="glyphicon glyphicon-shopping-cart"></span> 购物车(
+                <li><a href="shopcart" class="shopcart" > <span class="glyphicon glyphicon-shopping-cart"></span> 购物车(
                     <span class="shopcart_num">
                     0
                     </span>
