--- a/views/shopcart.ejs
+++ b/views/shopcart.ejs
@@ -8,7 +8,7 @@
 
     <script src="dist/js/jquery.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
-
+    <script src="javascripts/shopcart_main.js"></script>
 
 
 
@@ -65,7 +65,7 @@
                     <td><%= item.price %></td>
                     <td><%= item.unit %></td>
                     <td><%= item.count %></td>
-                    <td><%= item.subtotal %></td>
+                    <td><%= item.subtotalstr %></td>
                 </tr>
                 <% }); %>
                 </tbody>
