repair itemslist jump shopcart page,ajax请求无回应,在路由里面回应的render传到post请求了,所以shopcart页面请求不到,刷新一次就有了

--- a/views/adminp.ejs
+++ b/views/adminp.ejs
@@ -50,7 +50,7 @@
                 </tr>
                 <tr>
                     <td colspan="5"><input type="submit" class="btn btn-default btn-primary btn-lg btn-block "
-                                           value="添加该商品"></td>
+                                           value="添加该条码"></td>
                 </tr>
                 </tbody>
             </table>
