--- a/views/itemslist.ejs
+++ b/views/itemslist.ejs
@@ -28,7 +28,7 @@
         </div>
         <div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="shopcart" class="shopcart" > <span class="glyphicon glyphicon-shopping-cart"></span> 购物车(
+                <li> <a class="shopcart"  > <span class=" glyphicon glyphicon-shopping-cart"></span> 购物车(
                     <span class="shopcart_num">
                     0
                     </span>
