--- a/views/itemslist.ejs
+++ b/views/itemslist.ejs
@@ -5,7 +5,7 @@
 
     <link href="dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/jquery.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="model/item.js"></script>
