realize items subtotal display

--- a/views/shopcart.ejs
+++ b/views/shopcart.ejs
@@ -94,7 +94,7 @@
 
 <br>
 
-<div class="subtotal container" align="right"></div>
+<div class="subtotal container" align="right"><%= items_subtotalstr%> </div>
 <div class="payment container " align="right">
     <a href="details">
         <button class='btn btn-primary btn-lg'>付款</button>
